plugins {
    //  启用 Java 项目构建能力（编译、打包等）
    id 'java'
    //  支持 Spring Boot（自动配置、可执行 jar、插件机制）
    id 'org.springframework.boot' version '3.5.1'
    //  为 Spring Boot 提供 BOM（统一版本），不用手动控制依赖版本冲突
    id 'io.spring.dependency-management' version '1.1.7'
    //  启用增强模式, 增强 lazy loading、关联管理
    id 'org.hibernate.orm' version '7.1.3.Final'
    //  依赖检查插件
    id 'com.github.ben-manes.versions' version '0.53.0'
}

group = 'com.project'
version = '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral() // 从 Maven Central 下载依赖
}

configurations {
    // 避免出现“找不到注解”的问题
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    // --- Spring Boot ---
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // --- Database & Migration ---
    implementation 'com.mysql:mysql-connector-j:8.0.33'
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.6'
    implementation 'org.flywaydb:flyway-mysql:11.13.2'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0'

    // --- Security & Authentication ---
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'


    // --- Lombok (For Clean Code) ---
    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'

    // --- File & Image Processing ---
    implementation 'org.apache.pdfbox:pdfbox:3.0.5' // PDFBox 读取 PDF
    implementation 'org.apache.pdfbox:jbig2-imageio:3.0.4' // jbig2/jai 处理图片
    implementation 'org.apache.pdfbox:xmpbox:3.0.5'
    implementation 'com.github.jai-imageio:jai-imageio-core:1.4.0'
    implementation 'com.github.jai-imageio:jai-imageio-jpeg2000:1.4.0'
    implementation 'io.documentnode:epub4j-core:4.2.2'  // epub4j 读取 EPUB

    // --- UNRAR Support ---
    implementation 'com.github.junrar:junrar:7.5.5' // junrar 解压 RAR

    // --- JSON & Web Scraping ---
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.20.0'
    implementation 'org.jsoup:jsoup:1.21.2'

    // --- Mapping (DTOs & Entities) ---
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // --- API Documentation ---
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
    implementation 'org.apache.commons:commons-compress:1.28.0' // 压缩/解压工具库
    implementation 'org.apache.commons:commons-text:1.14.0' // 提供字符串处理工具

    // --- Test Dependencies ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.assertj:assertj-core:3.27.3'
    testImplementation "org.mockito:mockito-inline:5.2.0"

    // --- MinIO ---
    implementation 'io.minio:minio:8.5.7'
}

hibernate {
    enhancement {
        enableAssociationManagement = true
    }
}

test {
    useJUnitPlatform()
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}

